Added new form and adaptive

--- a/index.html
+++ b/index.html
@@ -145,9 +145,36 @@
     </section>
     <section class="buy">
         <div class="container">
+            <h2 class="title title--buy title--mob" id="buy">Сделайте счастливыми себя и своего ребенка</h2>
             <div class="buy__inner">
                 <div class="buy__inner--item">
-                    <h2 class="title title--buy" id="buy">Сделайте счастливыми себя и своего ребенка</h2>
+                    <h2 class="title title--buy title--desktop" id="buy">Сделайте счастливыми себя и своего ребенка</h2>
+                    <div class="buy__form">
+                        <form id="ltForm8148088"  action="https://kurs-kurkin.ru/pl/lite/block-public/process-html?id=998087598" method="post" data-open-new-window="0"><input type="hidden" name="formParams[setted_offer_id]" ><br>
+                            <input class="buy__input" type="text" maxlength="60"  placeholder="Введите ваш эл. адрес" name="formParams[email]" value="" ><br>
+                            <button class="button button--buy" type="submit"
+                                    id="button6035757"
+                                    
+                                    onclick="if(window['btnprs6039031586443']){return false;}window['btnprs6039031586443']=true;setTimeout(function(){window['btnprs6039031586443']=false},6000);return true;">
+                                Записаться</button><br>
+                            <input type="hidden" id="349355603903157a3ae" name="__gc__internal__form__helper" class="__gc__internal__form__helper" value="">
+                            <input type="hidden" id="349355603903157a3aeref" name="__gc__internal__form__helper_ref" class="__gc__internal__form__helper_ref" value="">
+                            <input type="hidden" name="requestTime" value="1614349077">
+                            <input type="hidden" name="requestSimpleSign" value="815d08a65d82451071b4fe680b514a3f">
+                            <input type="hidden" name="isHtmlWidget" value="1"/></form><span id="gccounterImgContainer"></span><script>
+                                window.addEventListener('load', function(){
+                                    let loc = document.getElementById("349355603903157a3ae");
+                                    loc.value = window.location.href;
+                                    let ref = document.getElementById("349355603903157a3aeref");
+                                    ref.value = document.referrer;
+                                    
+                                    let statUrl = "https://kurs-kurkin.ru/stat/counter?ref=" + encodeURIComponent(document.referrer)
+                                        + "&loc=" + encodeURIComponent(document.location.href);
+                                    document.getElementById('gccounterImgContainer').innerHTML
+                                        = "<img width=1 height=1 style='display:none' id='gccounterImg' src='" + statUrl + "'/>";
+                                });
+                            </script>
+                    </div>
                 </div>
                 <div class="buy__inner--item">
                     <img src="img/buy-img.svg" alt="Счастливая семья">
