Correct date and time

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
                     <div class="intro__block">
                         <div class="intro__block--item">
                             <svg><use href="sprite.svg#date"></use></svg>
-                            <p class="text text--intro">10-12 апреля в 19.30 по МСК</p>
+                            <p class="text text--intro">10-12 марта в 19.00 по МСК</p>
                         </div>
                         <a class="button button--intro" href="#buy">Участвовать</a>
                     </div>
@@ -145,7 +145,7 @@
     </section>
     <section class="buy">
         <div class="container">
-            <h2 class="title title--buy title--mob" id="buy">Сделайте счастливыми себя и своего ребенка</h2>
+            <h2 class="title title--buy title--mob">Сделайте счастливыми себя и своего ребенка</h2>
             <div class="buy__inner">
                 <div class="buy__inner--item">
                     <h2 class="title title--buy title--desktop" id="buy">Сделайте счастливыми себя и своего ребенка</h2>
