--- a/index.html
+++ b/index.html
@@ -150,22 +150,22 @@
                 <div class="buy__inner--item">
                     <h2 class="title title--buy title--desktop" id="buy">Сделайте счастливыми себя и своего ребенка</h2>
                     <div class="buy__form">
-                        <form id="ltForm8148088"  action="https://kurs-kurkin.ru/pl/lite/block-public/process-html?id=998087598" method="post" data-open-new-window="0"><input type="hidden" name="formParams[setted_offer_id]" ><br>
+                        <form id="ltForm7668997"  action="https://kurs-kurkin.ru/pl/lite/block-public/process-html?id=998087598" method="post" data-open-new-window="0"><input type="hidden" name="formParams[setted_offer_id]" ><br>
                             <input class="buy__input" type="text" maxlength="60"  placeholder="Введите ваш эл. адрес" name="formParams[email]" value="" ><br>
                             <button class="button button--buy" type="submit"
-                                    id="button6035757"
+                                    id="button9685077"
                                     
-                                    onclick="if(window['btnprs6039031586443']){return false;}window['btnprs6039031586443']=true;setTimeout(function(){window['btnprs6039031586443']=false},6000);return true;">
+                                    onclick="if(window['btnprs603cd21c39797']){return false;}window['btnprs603cd21c39797']=true;setTimeout(function(){window['btnprs603cd21c39797']=false},6000);return true;">
                                 Записаться</button><br>
-                            <input type="hidden" id="349355603903157a3ae" name="__gc__internal__form__helper" class="__gc__internal__form__helper" value="">
-                            <input type="hidden" id="349355603903157a3aeref" name="__gc__internal__form__helper_ref" class="__gc__internal__form__helper_ref" value="">
-                            <input type="hidden" name="requestTime" value="1614349077">
-                            <input type="hidden" name="requestSimpleSign" value="815d08a65d82451071b4fe680b514a3f">
+                            <input type="hidden" id="349355603cd21c27848" name="__gc__internal__form__helper" class="__gc__internal__form__helper" value="">
+                            <input type="hidden" id="349355603cd21c27848ref" name="__gc__internal__form__helper_ref" class="__gc__internal__form__helper_ref" value="">
+                            <input type="hidden" name="requestTime" value="1614598684">
+                            <input type="hidden" name="requestSimpleSign" value="ee9e14131f5e6b49d551847c56ffca1d">
                             <input type="hidden" name="isHtmlWidget" value="1"/></form><span id="gccounterImgContainer"></span><script>
                                 window.addEventListener('load', function(){
-                                    let loc = document.getElementById("349355603903157a3ae");
+                                    let loc = document.getElementById("349355603cd21c27848");
                                     loc.value = window.location.href;
-                                    let ref = document.getElementById("349355603903157a3aeref");
+                                    let ref = document.getElementById("349355603cd21c27848ref");
                                     ref.value = document.referrer;
                                     
                                     let statUrl = "https://kurs-kurkin.ru/stat/counter?ref=" + encodeURIComponent(document.referrer)
